Add all cards.  Add borders.  Add jumbotron.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Griffy" rel="stylesheet">
     <script src="js/jquery-3.2.0.js"></script>
     <script src="js/scripts.js"></script>
     <title>Flashcards</title>
@@ -11,6 +12,12 @@
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
+        <h1>Flashcards</h1>
+        <p>
+          Flashcards of JavaScript and jQuery terms
+        </p>
+      </div>
       <div class="row">
           <div class="col-md-6" id="JavaScript">
             <div id="JavaScript-front">
@@ -47,6 +54,118 @@
                 <p><span class="clickable">This is the definition of Functions</span></p>
               </div>
             </div>
+
+            <div class="col-md-6" id="Methods">
+              <div id="Methods-front">
+                <p><span class="clickable">Methods</span></p>
+              </div>
+              <div id="Methods-back">
+                <p><span class="clickable">This is the definition of Methods</span></p>
+              </div>
+            </div>
+
+            <div class="col-md-6" id="Arguments">
+              <div id="Arguments-front">
+                <p><span class="clickable">Arguments</span></p>
+              </div>
+              <div id="Arguments-back">
+                <p><span class="clickable">This is the definition of Arguments</span></p>
+              </div>
+            </div>
+
+              <div class="col-md-6" id="Parameters">
+                <div id="Parameters-front">
+                  <p><span class="clickable">Parameters</span></p>
+                </div>
+                <div id="Parameters-back">
+                  <p><span class="clickable">This is the definition of Parameters</span></p>
+                </div>
+              </div>
+
+              <div class="col-md-6" id="Return">
+                <div id="Return-front">
+                  <p><span class="clickable">Return</span></p>
+                </div>
+                <div id="Return-back">
+                  <p><span class="clickable">This is the definition of Return</span></p>
+                </div>
+              </div>
+
+              <div class="col-md-6" id="Strings">
+                <div id="Strings-front">
+                  <p><span class="clickable">Strings</span></p>
+                </div>
+                <div id="Strings-back">
+                  <p><span class="clickable">This is the definition of Strings</span></p>
+                </div>
+              </div>
+
+              <div class="col-md-6" id="Booleans">
+                <div id="Booleans-front">
+                  <p><span class="clickable">Booleans</span></p>
+                </div>
+                <div id="Booleans-back">
+                  <p><span class="clickable">This is the definition of Booleans</span></p>
+                </div>
+              </div>
+
+                <div class="col-md-6" id="Undefined">
+                  <div id="Undefined-front">
+                    <p><span class="clickable">Undefined</span></p>
+                  </div>
+                  <div id="Undefined-back">
+                    <p><span class="clickable">This is the definition of Undefined</span></p>
+                  </div>
+                </div>
+
+                <div class="col-md-6" id="Escape">
+                  <div id="Escape-front">
+                    <p><span class="clickable">Escape</span></p>
+                  </div>
+                  <div id="Escape-back">
+                    <p><span class="clickable">This is the definition of Escape</span></p>
+                  </div>
+                </div>
+
+                <div class="col-md-6" id="Alert">
+                  <div id="Alert-front">
+                    <p><span class="clickable">Alert</span></p>
+                  </div>
+                  <div id="Alert-back">
+                    <p><span class="clickable">This is the definition of Alert</span></p>
+                  </div>
+                </div>
+
+                <div class="col-md-6" id="Comments">
+                  <div id="Comments-front">
+                    <p><span class="clickable">Comments</span></p>
+                  </div>
+                  <div id="Comments-back">
+                    <p><span class="clickable">This is the definition of Comments</span></p>
+                  </div>
+                </div>
+
+                  <div class="col-md-6" id="jQuery">
+                    <div id="jQuery-front">
+                      <p><span class="clickable">jQuery</span></p>
+                    </div>
+                    <div id="jQuery-back">
+                      <p><span class="clickable">This is the definition of jQuery</span></p>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6" id="Attributes">
+                    <div id="Attributes-front">
+                      <p><span class="clickable">Attributes</span></p>
+                    </div>
+                    <div id="Attributes-back">
+                      <p><span class="clickable">This is the definition of Attributes</span></p>
+                    </div>
+                  </div>
+
+
+
+
         </div>
     </div>
 
